NEWS about R package optimz

TODO
      o Troubles with NAMESPACE collisions NOT resolved.
      o Consider how the hyperbolic transformation (transfinite fn)
        could be used in all unconstrained methods
      o How can transfinite be made to work when start is on bounds?
	To work when end is on bounds?
      o Rcgmin seems to report reset of parameters to bounds when parameter
        is apparently on the bound. Could have rounding issues, and should
        avoid this warning if it is really not needed.
      o Add nloptr methods -- there are a number and we need to choose how
	to do so. 
      o Do NOT add ipoptr due to non-standard install. 
      o Need to check that scaling of bounds is correct.


VERSION 2016-05-30
      o Crude setting of uobyqa and newuoa for control rhobeg.
        Especially when parameters all 0, or bounds undefined, program 
	will fail so we need to set this. May also be needed for rhoend.

VERSION 2016-01-07
      o realized control rhobeg needed to be set or bobyqa would fail.

VERSION 2015-12-20
      o first stable version
