@@ -7,7 +7,8 @@ import(
   Rtnmin,
   Rvmmin,
   Rcgmin,
-  lbfgsb3
+  lbfgsb3,
+  lbfgs
 )
 importFrom("stats", "nlm", "nlminb", "optim")
 importFrom("utils", "str")
